Minor fixes to paths lemmata

--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -134,12 +134,12 @@ We now show the basic properties of $\to_\fris$. Namely, that the reduction does
 
 %-------------------------------------
 \begin{lemma}\label{lemma:IsolatedSubflowRemovalPaths}
-In the following we refer to the names given in Definition~\vref{definition:IsolatedSubflowRemoval}. 
+In the following we refer to the names given in Definition~\vref{definition:IsolatedSubflowRemoval}.
 Given two flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$ then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
 \begin{enumerate}
 \item $\nu=f_1(\nu')$ or $\nu=f_2(\nu')$;
 \item if there is a path from $\nu$ to $\bot$ (resp., $\top$), then there is a path from $\nu'$ to $\bot$ (resp., $\top$); and
-\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that $\hat\nu=f_1(\nu')$ or $\hat\nu=f_2(\nu')$, or $\hat\nu'=\nu_\aiu$ (resp., $\hat\nu'=\nu_\aid$); and there is a path from $\nu'$ to $\hat\nu'$.
+\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that $\hat\nu=f_1(\hat\nu')$ or $\hat\nu=f_2(\hat\nu')$, or $\hat\nu'=\nu_\aiu$ (resp., $\hat\nu'=\nu_\aid$); and there is a path from $\nu'$ to $\hat\nu'$.
 \end{enumerate}
 \end{lemma}
 
