--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -260,7 +260,7 @@ In the following we refer to the names given in Definition~\vref{definition:Mult
 \begin{enumerate}
 \item for some $1\le i\le N+1$, $\nu=f_i(\nu')$;
 \item if there is a path from $\nu$ to $\bot$ (resp., $\top$), then there is a path from $\nu'$ to $\bot$ (resp., $\top$); and
-\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $1\le i\le N+1$, $\hat\nu=f_i(\nu')$, or, for some $1\le i\le n$, $\hat\nu'=\nu_{\aiu,i}$ (resp., $\hat\nu'=\nu_{\aid,i}$); and there is a path from $\nu'$ to $\hat\nu'$.
+\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $1\le i\le N+1$, $\hat\nu=f_i(\hat\nu')$, or, for some $1\le i\le n$, $\hat\nu'=\nu_{\aiu,i}$ (resp., $\hat\nu'=\nu_{\aid,i}$); and there is a path from $\nu'$ to $\hat\nu'$.
 \end{enumerate}
 \end{lemma}
 
