--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -323,8 +323,7 @@ Given a derivation $\Phi$ where the atoms $a_1$ and $a_2$ occur, such that the f
 \vcenter{\hbox{\includegraphics{Figures/exPB1}}}
 \quad,
 \]
-and where all the edges in $\phi_1$ are mapped to from $a_1$ and all the edges in $\phi_2$ are mapped to from $a_2$, and there are no edges in $\psi$ that are mapped to from $a_1$ or $a_2$, then the flow associated with $\PB((\Phi,a_1),a_2)$ is the juxtaposition of the following three flows (where indications of the different isomorphisms are left out):
-
+and where all the edges in $\phi_1$ are mapped to from $a_1$ and $\bar a_1$, and all the edges in $\phi_2$ are mapped to from $a_2$ and $\bar a_2$, and there are no edges in $\psi$ that are mapped to from $a_1$ or $a_2$, then the flow associated with $\PB(\PB(\Phi,a_1),a_2)$ is the following flow (where indications of the different isomorphisms are left out):
 \[
 \vcenter{\hbox{\includegraphics{Figures/exPB2}}}
 \quad.
