--- a/sks.tex
+++ b/sks.tex
@@ -96,7 +96,7 @@ The relation $=$ defined in Definition~\vref{definition:EquivalenceRelation} is 
 \end{proposition}
 %----------------
 
-It turns out that the equivalence class induced by $=$ is the same as the structures defined in \cite{}.
+It turns out that the equivalence class induced by $=$ is the same as the structures used in \cite{Brun:04:Deep-Inf:rq}.
 
 %----------------------------------------
 \begin{remark}\label{remark:EquationSize}
