--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -32,7 +32,9 @@ There are several ways of encoding threshold functions into formulae, and the pr
 
 \Tom{Used to be: In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $n\le x$.}
 
-In the following, $\underline  n$ (resp., $\overline  n$) denotes the maximum (resp., minimum) integer $x$ such that $x\le n/2$ (resp., $x\ge n/2$). The reason for this notation will become clear in Definition~\vref{definition:ThresholdFormulae}. We will need to split the $n$ atoms $a_1$, $\dots$, $a_n$ into the $\underline  n$ atoms $a_1$, $\dots$, $a_{\underline  n}$ and the $\overline  n$ atoms $a_{\underline  n+1}$, $\dots$, $a_n$.
+\Tom{Added last sentence after Fran\c{c}ois' suggestion:}
+
+In the following, $\underline  n$ (resp., $\overline  n$) denotes the maximum (resp., minimum) integer $x$ such that $x\le n/2$ (resp., $x\ge n/2$). The reason for this notation will become clear in Definition~\vref{definition:ThresholdFormulae}. We will need to split the $n$ atoms $a_1$, $\dots$, $a_n$ into the $\underline  n$ atoms $a_1$, $\dots$, $a_{\underline  n}$ and the $\overline  n$ atoms $a_{\underline  n+1}$, $\dots$, $a_n$. It is important to notice that, for any $n$, $\underline n+\overline n=n$.
 
 The following class of threshold formulae, which we found to work for system $\SKS$, is a simplification of the one adopted in \cite{AtseGalePudl:02:Monotone:yu}.
 
