Added labels to upper/lower edges of MISR

--- a/Figures/redMISRContractum.tex
+++ b/Figures/redMISRContractum.tex
@@ -18,7 +18,7 @@
    \atomicflow{(0,0)*{\afacd{}{}{}{}{}{}}}$}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \atomicflow{
-(-12, 56)*{\afvjm4};
+(-12, 56)*{\afvjdm4{}{\boldsymbol\epsilon}};
 (-12, 50)*{\copy\contrup};
 (-12, 50)*{\affr{16}{8}};
 ( -5, 44)*{\afvjdm4{}{f_1(\boldsymbol\epsilon)}};
@@ -84,7 +84,7 @@
 ( -5,-44)*{\afvjum4{}{f_{N+1}(\boldsymbol\iota)}};
 (-12,-50)*{\affr{16}{8}};
 (-12,-50)*{\copy\contrdown};
-(-12,-56)*{\afvjm4};
+(-12,-56)*{\afvjdm4{}{\boldsymbol\iota}};
 }
 \]
 
