--- a/formalism.tex
+++ b/formalism.tex
@@ -2,11 +2,9 @@
 
 The traditional formalism in deep inference is \emph{the calculus of structures} \cite{Gugl:06:A-System:kl}.
 
-\TODO{Few words of caution about Formalism A note.}
+\Tom{`bureaucracy free' -> `less bureaucracy'.}
 
 The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less bureaucracy, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
-
-\TODO{Never use the term ``bureaucracy free'' or ``lack of bureaucracy''. Instead use ``bureaucracy reduced'' or ``reduced bureaucracy''. Moreover, the main benefit is the plasticity, not the bureaucracy.}
 
 \Tom{Removed mentioning of `bureaucrcacy':}
 
