--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,7 @@
 \chapter{Introduction}
 
+\TODO{Replace this introduction:}
+
 \emph{Proof theory} studies formal representations of mathematical proofs. Formal representations of proofs are needed in order to, among other things, automatically verify or search for proofs and prove consistency of mathematical theories.
 
 Furthermore, representations of proofs are interesting mathematical objects in their own right. In particular, they are related to longstanding open problems: The problem of $NP$ versus $co$-$NP$, from computational complexity theory, and the problem of \emph{identity of proofs}, can both be stated in terms of representations of proofs.
