Acknowledgments and abstract

--- a/thesis.tex
+++ b/thesis.tex
@@ -88,32 +88,23 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\clearpage
-%\thispagestyle{plain}
-%%\singlespacing
-%%\onehalfspacing
-%%\doublespacing
-%\begin{center}
-%\vspace{20pt}
-%  \Large\bfseries{SUMMARY}
-%\end{center}
-%%\input{abstract.tex}
+\clearpage
+\thispagestyle{plain}
+%\singlespacing
+%\onehalfspacing
+%\doublespacing
+\begin{center}
+\vspace{20pt}
+  \Large\bfseries{ABSTRACT}
+\end{center}
+\input{abstract.tex}
 
-%\clearpage
-%\thispagestyle{plain}
-%\begin{center}
-%  {\Large\bfseries{ACKNOWLEDGEMENTS}}
-%\end{center}
-%%\input{acknowledgements.tex}
-%
-%\clearpage
-%\thispagestyle{plain}
-%\begin{center}
-%  {\Large\bfseries{PUBLICATIONS}}
-%\end{center}
-%\begin{flushleft}
-%%\input{papers.tex}
-%\end{flushleft}
+\clearpage
+\thispagestyle{plain}
+\begin{center}
+  {\Large\bfseries{ACKNOWLEDGEMENTS}}
+\end{center}
+\input{acknowledgements.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
