--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -51,6 +51,14 @@ We provide constructive soundness proofs for every reduction in this thesis, so 
 \end{convention}
 %---------------
 
+\Tom{Added remark:}
+
+%-----------------------------------
+\begin{remark}\label{remark:lifting}
+Alternatively, as suggested by Fran\c{c}ois Lamarche, instead of saying that a reduction is sound, we could say that it is \emph{liftable}\index{reduction!liftable}. The constructive soundness proofs which we will see later on, then becomes \emph{liftings}.
+\end{remark}
+%-----------
+
 %-----------------
 \begin{convention}
 To avoid ambiguity in Definition~\vref{definition:FourBoxes}, Definition~\vref{definition:IsolatedSubflowRemoval}, Definition~\vref{definition:PathBreaker} and Definition~\vref{definition:MultipleIsolatedSubflowsRemoval} we have establish the following convention:
