Updated DI bibliography database

--- a/di-biblio.bib
+++ b/di-biblio.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Alessio Guglielmi at 2009-06-12 07:05:47 +0200 
+%% Created for Alessio Guglielmi at 2009-10-16 08:36:38 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -595,6 +595,15 @@
 	Volume = {141},
 	Year = {2006}}
 
+@phdthesis{Gund:09:A-Genera:kx,
+	Author = {Gundersen, Tom},
+	Date-Added = {2009-08-09 11:17:28 +0200},
+	Date-Modified = {2009-08-09 11:18:14 +0200},
+	Keywords = {deep inference},
+	School = {University of Bath},
+	Title = {A General View of Normalisation Through Atomic Flows},
+	Year = {2009}}
+
 @mastersthesis{Hein:05:Geometri:bs,
 	Author = {Hein, Robert},
 	Date-Modified = {2006-07-13 13:12:56 +0100},
@@ -688,12 +697,15 @@
 @article{Kahr:09:On-Linea:ix,
 	Author = {Kahramano{\u g}ullar{\i}, Ozan},
 	Date-Added = {2009-01-24 06:35:50 +0100},
-	Date-Modified = {2009-01-24 06:37:25 +0100},
+	Date-Modified = {2009-10-16 08:35:36 +0200},
 	Journal = {Information and Computation},
 	Keywords = {deep inference},
-	Note = {In press. \url{http://www.doc.ic.ac.uk/~ozank/Papers/on_linear.pdf}},
+	Note = {\url{http://www.doc.ic.ac.uk/~ozank/Papers/on_linear.pdf}},
+	Number = {11},
+	Pages = {1229--1258},
 	Publisher = {Elsevier},
 	Title = {On Linear Logic Planning and Concurrency},
+	Volume = {207},
 	Year = {2009}}
 
 @unpublished{Kahr:08:Ingredie:bf,
@@ -834,9 +846,10 @@
 @inproceedings{Kahr:06:Reducing:hc,
 	Author = {Kahramano{\u g}ullar{\i}, Ozan},
 	Booktitle = {LPAR 2006},
-	Date-Modified = {2009-06-12 06:34:18 +0200},
+	Date-Modified = {2009-09-30 19:02:19 +0200},
 	Editor = {M. Hermann and A. Voronkov},
 	Keywords = {deep inference},
+	Note = {\url{http://dx.doi.org/10.1007/11916277_19}},
 	Pages = {272--286},
 	Publisher = {Springer-Verlag},
 	Series = {Lecture Notes in Computer Science},
@@ -1011,14 +1024,15 @@
 	Volume = {85},
 	Year = {2007}}
 
-@unpublished{Stra:09:From-Dee:fr,
+@article{Stra:09:From-Dee:fr,
 	Author = {Stra{\ss}burger, Lutz},
-	Date-Added = {2009-03-30 09:22:48 +0200},
-	Date-Modified = {2009-03-30 09:23:31 +0200},
+	Date-Added = {2009-09-03 08:25:28 +0200},
+	Date-Modified = {2009-09-03 09:01:20 +0200},
+	Journal = {Journal of Logic and Computation},
 	Keywords = {deep inference},
-	Note = {Submitted. \url{http://www.lix.polytechnique.fr/~lutz/papers/deepnet.pdf}},
+	Note = {In press. \url{http://www.lix.polytechnique.fr/~lutz/papers/deepnet.pdf}},
 	Title = {From Deep Inference to Proof Nets via Cut Elimination},
-	Year = {2009}}
+	Year = 2009}
 
 @unpublished{StraGugl:09:A-System:vn,
 	Author = {Stra{\ss}burger, Lutz and Guglielmi, Alessio},
@@ -1032,20 +1046,26 @@
 @unpublished{Stra:08:Extensio:kk,
 	Author = {Stra{\ss}burger, Lutz},
 	Date-Added = {2008-07-01 11:58:02 +0100},
-	Date-Modified = {2008-07-01 12:04:19 +0100},
+	Date-Modified = {2009-09-03 08:56:38 +0200},
 	Keywords = {deep inference},
-	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/psppp.pdf}},
+	Note = {Submitted. \url{http://www.lix.polytechnique.fr/~lutz/papers/psppp.pdf}},
 	Title = {Extension Without Cut},
-	Year = {2008}}
+	Year = {2009}}
 
-@unpublished{Strasburger:2008qf,
+@inproceedings{Strasburger:2008qf,
 	Author = {Stra{\ss}burger, Lutz},
+	Booktitle = {Typed Lambda Calculi and Applications},
 	Date-Added = {2008-05-19 11:32:46 +0100},
-	Date-Modified = {2008-05-19 11:34:04 +0100},
+	Date-Modified = {2009-09-03 08:48:28 +0200},
+	Editor = {Curien, Pierre-Louis},
 	Keywords = {deep inference},
-	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/ObsPT-MLL2.pdf}},
+	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/ObsPT-MLL2-finalforTLCA09.pdf}},
+	Pages = {309--324},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Computer Science},
 	Title = {Some Observations on the Proof Theory of Second Order Propositional Multiplicative Linear Logic},
-	Year = 2008}
+	Volume = {5608},
+	Year = 2009}
 
 @techreport{Stra:06:Proof-Ne:fk,
 	Author = {Stra{\ss}burger, Lutz},
@@ -1190,10 +1210,10 @@
 @inproceedings{Stra:05:From-Dee:yb,
 	Author = {Stra{\ss}burger, Lutz},
 	Booktitle = {Structures and Deduction},
-	Date-Modified = {2006-07-13 13:12:56 +0100},
+	Date-Modified = {2009-09-03 09:01:47 +0200},
 	Editor = {Paola Bruscoli and Fran{\c c}ois Lamarche and Charles Stewart},
 	Keywords = {deep inference},
-	Note = {ICALP Workshop. ISSN 1430-211X. \url{http://www.lix.polytechnique.fr/~lutz/papers/deepnet.ps}},
+	Note = {ICALP Workshop. ISSN 1430-211X. \url{http://www.lix.polytechnique.fr/~lutz/papers/deepnet-SD05.pdf}},
 	Pages = {2--18},
 	Publisher = {Technische Universit{\"a}t Dresden},
 	Title = {From Deep Inference to Proof Nets},
